# Day2Year

./: .gitignore  CMakeLists.txt  README.md  generate_coverage.sh  rebuild.sh
src/: YearConverter.cpp  YearConverter.h
tests/: test_main.cpp
